--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.0.0",
     "@mui/styled-engine-sc": "^6.0.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.12"
   },
