--- a/project/package.json
+++ b/project/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
     "@mui/styled-engine-sc": "^6.0.0",
+    "project": "file:",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.12"
+    "react-draggable": "^4.4.6",
+    "styled-components": "^6.1.12",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
